--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,9 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "chillerlan/php-qrcode": "^5.0",
         "cloudinary-labs/cloudinary-laravel": "^2.3",
         "cloudinary/cloudinary_php": "^2.14",
+        "endroid/qr-code": "^6.1",
         "guzzlehttp/guzzle": "^7.2",
+        "khqr-gateway/bakong-khqr-php": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
