--- a/backend/.env.example
+++ b/backend/.env.example
@@ -59,3 +59,14 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=
+CLOUDINARY_URL=
+
+BAKONG_TOKEN= 
+BAKONG_BASE_URL=
+BAKONG_ACCOUNT=
+BAKONG_ACQUIRING_BANK=
+
+JWT_TTL=1440       # 1 day
+JWT_REFRESH_TTL=10080  # 1 week for refresh tokens
+
+GEMINI_API_KEY=
