--- a/backend/.env.example
+++ b/backend/.env.example
@@ -70,3 +70,13 @@ JWT_TTL=1440       # 1 day
 JWT_REFRESH_TTL=10080  # 1 week for refresh tokens
 
 GEMINI_API_KEY=
+
+envMAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME="My App"
+
